# StimkerBot

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  bitch.db  build.sh  readme.md
.sqlx/: query-6fd4cc066e25e232f5e8c720792c64feb8b1eb6a880bf0040399b2a1d4f4fba3.json  query-9d66c28b9391d1b7f64c8cb6fafc054de6bc47dc10987620030a234767f2ac50.json
entity/src/entities/: mod.rs  prelude.rs  sticker_stat.rs  sticker_tag.rs  tag.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231025_223402_add_last_used.rs
migrations/: 20231026150011_init.sql  20231026150156_add_last_used.sql  20231029134328_renaming.sql  20231029135253_remove_seaorm.sql  20231029135339_type_column.sql  20231029144954_split_file_id.sql  20231029190506_add_created_at.sql  20231109142554_add_indices.sql  20231127223147_add_last_fixed_time.sql
src/: database.rs  dialogue.rs  inline.rs  main.rs  messages.rs  types.rs  util.rs
src/database/: entities.rs  import.rs  mod.rs  queries.rs
src/database/import/: export.rs  fix.rs  import.rs  mod.rs  types.rs
src/database/queries/: entities.rs  entity_stats.rs  global_stats.rs  mod.rs  search.rs  tags.rs  types.rs  users.rs
src/handlers/: command.rs  import.rs  inline.rs  mod.rs  send_message.rs  stop.rs  tags.rs
