[package]
name = "sticker_bot"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.33", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
time-humanize = "0.1.3"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "macros",
  "migrate",
] }
