[package]
name = "sticker_bot"
version = "0.4.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# teloxide = { version = "0.13", features = ["macros"] }
teloxide = { git = "https://github.com/LasterAlex/teloxide/", branch = "fix-inline-query-results-button-serializing", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
time-humanize = "0.1"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "migrate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
base64 = "0.22"
anyhow = "1.0"
